# franka-realtime-tracking

./: .gitignore  CMakeLists.txt  README.md  install_libs.sh  kalman_outdated.cpp  pose_estimator_server.py  run_demo.py  set_up.sh  set_vars.env  state_controller.cpp  test.sh
.ipynb_checkpoints/: Untitled1-checkpoint.ipynb
client/: .main.cpp.swp  CMakeLists.txt  main.cpp
kalman/: kalman.cpp
server/: .main.cpp.swp  CMakeLists.txt  main.cpp
src/: move_test.cpp
src_code/: .pin_test.cpp.swo  .pin_test.cpp.swp  CMakeLists.txt  pin_test.cpp  pin_test.cpp.save-failed
state_controller/: .state_controller.cpp.swp  CMakeLists.txt  Untitled.ipynb  Untitled1.ipynb  \  new_filter.cpp  plot_data.ipynb  state_controller.cpp
state_controller/.ipynb_checkpoints/: plot_data-checkpoint.ipynb
state_controller/kalman/: .kalman.cpp.swp  kalman.cpp  kalman.h
state_controller/opt/: .trajectory_generator.cpp.swp  trajectory_generator.cpp  trajectory_generator.h
state_controller/trajectory_generator/: .trajectory_generator.cpp.swp  CMakeLists.txt  trajectory_generator.cpp  trajectory_generator.h
